--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "^5.0.1",
     "twilio": "^3.69.0",
     "twilio-video": "^2.17.1",
-    "utils": "^0.3.1"
+    "util": "^0.12.5"
   },
   "scripts": {
     "start": "react-scripts start",
